log/build_2024-11-08_21-49-32/system_controller/stderr.log
  File "/home/csanimatronics/CS_Animatronics/install/system_controller/lib/python3.12/site-packages/system_controller/system_controller.py", line 54
    ids = [0 0]
           ^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

